<resources>
    <string name="app_name">sosApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="add_contact">Add Contact</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="send_text">Send text</string>
    <string name="remove">remove</string>
    <string name="custom_text">Custom text</string>
    <string name="text">Text</string>
    <string name="complete">Complete</string>
    <string name="send_text_as_well">Send text as well</string>
    <string name="add_contacts">Add contacts</string>
    <string name="search">Search</string>
</resources>